# kiwi

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  local.db  package.json  pnpm-lock.yaml  pyproject.toml  test_dashboard.py  test_extract.py  update_backend.py  update_frontend.py
apps/api/: pyproject.toml  seed_branches.py  seed_menu.py  seed_menu.py.bak
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202607071730_0001_bootstrap_platform.py  202607071900_0002_base_operational_schema.py  202607072030_0003_minimum_catalog.py  202607072200_0004_cash_orders_kds.py  202607072330_0005_payments_cut_print.py  202607080010_0006_sync_commands.py  202607081200_0007_inventory_ledger.py  202607081430_0008_rbac_permissions.py  202607081700_0009_superadmin_auth.py  202607090530_0010_pos_advanced_features.py  202607090530_0010_pos_advanced_features.py.bak  202607090645_0011_add_product_image_url.py  202607100000_0012_add_caja_role.py  202607100130_0013_pos_cash_rbac_permissions.py  202607100200_0013a_expand_version_num.py  202607100245_0014_legacy_caja_role_permissions.py  202607110100_0015_business_units_operational_roles.py  202607110700_0021_real_waste.py  (+15 more)
apps/api/restaurant_os/: __init__.py  api.py  auth.py  catalog_policy.py  config.py  database.py  health.py  legacy_import.py  main.py  models.py  operations.py  platform_data.py  platform_shell.py
apps/api/tests/: test_catalog_cleanup.py  test_config.py  test_global_catalog_comments_extras.py  test_health.py  test_ingredient_variations.py  test_legacy_import.py  test_migrations.py  test_platform_api.py
(+190 files in other folders)
