[project]
name = "restaurant-os-api"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "redis>=5.0,<6.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.10,<2.0"
]

[tool.setuptools]
packages = ["restaurant_os"]
